tests/ui/rfcs/rfc-2632-const-trait-impl/issue-102156.stderr
error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^ maybe a missing crate `core`?
   |
help: try using `std` instead of `core`
   |
LL | use std::convert::{From, TryFrom};
   |     ~~~

error[E0433]: failed to resolve: maybe a missing crate `core`?
  --> $DIR/issue-102156.rs:4:5
   |
LL | use core::convert::{From, TryFrom};
   |     ^^^^ maybe a missing crate `core`?
   |
   = note: duplicate diagnostic emitted due to `-Z deduplicate-diagnostics=no`
help: try using `std` instead of `core`
   |
LL | use std::convert::{From, TryFrom};
   |     ~~~

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0433`.
